--- a/progress/siscaixa/web/crap005.htm
+++ b/progress/siscaixa/web/crap005.htm
@@ -8,6 +8,8 @@
 						   
 			  27/06/2016 - Tratamentos para utilizaçao do Cartao CECRED e 
                            PinPad Novo (Lucas Lunelli - [PROJ290])						   
+				
+			  22/09/2016 - Correção botão pinpad (Lucas Lunelli - [PROJ290])	
 -->
 
 <html>
@@ -621,7 +623,7 @@ function submitForm(limpa_sel) {
         </tr>
         <tr>
 											<td width="22%" class="linhaform" align="right">Senha Cartão:</td>
-											<td> <input type="password" name="v_dssencrd" id="v_dssencrd" size="10" class="input" maxlength="6" onmousedown="return false;" onFocus="solicitaSenhaPinpadNovo('', this.value);" onBlur="if (this.value != '') { document.getElementById('divProcessando').style.display = 'block'; document.form1.ok.click(); }" onKeyDown="JavaScript:validaInteiro(event);" onkeyup="JavaScript:enviaFormularioPinPad(this, event);" style="text-align: right"></td>
+											<td> <input type="password" name="v_dssencrd" id="v_dssencrd" size="10" class="input" maxlength="6" onmousedown="return false;" onFocus="solicitaSenhaPinpadNovo('', this.value);" onBlur="if (this.value != '') { }" onKeyDown="JavaScript:validaInteiro(event);" style="text-align: right"></td>											
         </tr>
 									</table>
 								</center>
