--- a/progress/siscaixa/web/crap020.htm
+++ b/progress/siscaixa/web/crap020.htm
@@ -38,6 +38,8 @@
 			  29/02/2016 - Tratamentos para utilizaçao do Cartao CECRED e 
                            PinPad Novo (Lucas Lunelli - [PROJ290])			  
 						   
+			  22/09/2016 - Correção botão pinpad (Lucas Lunelli - [PROJ290])	
+			  
 -->
 
 
@@ -781,7 +783,7 @@ function validaHistorico(obj,e,valid_value,replace){
                 </tr>				
 				<tr id="divSenhaCartao">
                   <td class=linhaform align="right">Senha Cartão:</td>
-                  <td ><input class="input" type="password" name="v_dssencrd" id="v_dssencrd" size="10" maxlength="6" onmousedown="return false;" onBlur="if (this.value != '') { document.action.ok.click(); } else { v_dsimpvia1.focus(); }" onFocus="solicitaSenhaPinpadNovo('', this.value);" onKeyDown="JavaScript:validaInteiro(event);" onkeyup="JavaScript:enviaFormularioPinPad(this, event);" style="text-align: right"></td>
+                  <td ><input class="input" type="password" name="v_dssencrd" id="v_dssencrd" size="10" maxlength="6" onmousedown="return false;" onBlur="if (this.value != '') { } else { v_dsimpvia1.focus(); }"  onFocus="solicitaSenhaPinpadNovo('', this.value);" onKeyDown="JavaScript:validaInteiro(event);" style="text-align: right"></td>
                 </tr>				
                 <tr>
                   <td class=linhaform align="right">Código:</td>
