--- a/progress/siscaixa/web/crap014.htm
+++ b/progress/siscaixa/web/crap014.htm
@@ -20,7 +20,9 @@ Alteracoes: 03/07/2009 - Aumento do campo Operador (Diego).
             11/09/2015 - Melhoria 21 (Tiago/Fabricio).
     
             12/02/2016 - Ajustes para nao editar o campo de valor quando
-                         for pagamento de fatura (Tiago/Fabricio SD385720)           
+                         for pagamento de fatura (Tiago/Fabricio SD385720)   
+   
+            03/10/2016 - Ajustes referente a melhoria M271. (Kelvin)        
 -->
 
 <html>
@@ -480,10 +482,6 @@ Alteracoes: 03/07/2009 - Aumento do campo Operador (Diego).
         </td>
     </tr>
     <tr>
-        <td width=15% align="right">Valor:</td>
-                <td> <input type="text" name="v_valor" id="v_valor" size="20" class="input" onKeyUp="callCalc(event, this)" onKeyDown="JavaScript:FormataValor(this,14,event)" maxlength="18" style="text-align: right"></td>
-    </tr>
-    <tr>
         <td width=15% align="right">Cod Barra: </td>
                   <td>
                      <input type="text" id="v_fmtcodbar" name="v_fmtcodbar" size="79" class="input" style="text-align: Right" />
@@ -496,6 +494,10 @@ Alteracoes: 03/07/2009 - Aumento do campo Operador (Diego).
              Fim do comentario -->        
              
           </td>
+    </tr>
+	<tr>
+        <td width=15% align="right">Valor:</td>
+                <td> <input type="text" name="v_valor" id="v_valor" size="20" class="input" onKeyUp="callCalc(event, this)" onKeyDown="JavaScript:FormataValor(this,14,event)" maxlength="18" style="text-align: right"></td>
     </tr>
     <tr>
         <td align="right" class="linhaform" colspan="2" height="50">
