03/11/2016 - Ajustes para TAB e ESC funcionarem de acrodo com o padrão  de navegação (Tiago/Elton SD535217).
git-tfs-id: [http://alm.cecred.coop.br:8080/tfs/DefaultCollection]$/FONTES/2016_11;C7908

--- a/progress/siscaixa/web/crap054.htm
+++ b/progress/siscaixa/web/crap054.htm
@@ -3,7 +3,7 @@
    Sistema : Caixa On-line
    Sigla   : CRED   
    Autor   : Mirtes.
-   Data    : Marco/2001                      Ultima atualizacao: 23/02/2016
+   Data    : Marco/2001                      Ultima atualizacao: 03/11/2016
 
   Alteracoes: 	03/07/2009 - Aumento do campo Operador (Diego).
   
@@ -23,6 +23,9 @@
 				23/02/2016 - Tratamentos para utilizaçao do Cartao CECRED e 
                              PinPad Novo (Lucas Lunelli - [PROJ290])
 
+                03/11/2016 - Ajustes para TAB e ESC funcionarem de acrodo com o padrão
+                             de navegação e ajustado a chamada do callBlass para callBLass 
+                             pq nao funcionava (Tiago/Elton SD535217).
 ----------------------------------------------------------------------------------------------->
 
 <html>
