--- a/progress/progrid/web/fontes/wpgd0008c.htm
+++ b/progress/progrid/web/fontes/wpgd0008c.htm
@@ -18,7 +18,7 @@
 			<input name="aux_dsendurl" type="hidden" id="aux_dsendurl"  value=""> 
       <input name="aux_cdcopope" type="hidden" value="">
       <input name="aux_cdoperad" type="hidden" value="">
-			<script SRC="/modelo/js/funcoes.js"></script>
+			<script SRC="/cecred/js/funcoes.js"></script>
 			<script language="JavaScript">
 				NomeDoProgramaPrincipal  = '/wpgd0008c.w';
 				NomeDoProgramaDeZoom     = '';
