--- a/progress/progrid/web/fontes/wpgd0010a.htm
+++ b/progress/progrid/web/fontes/wpgd0010a.htm
@@ -20,7 +20,7 @@
 NomeDoProgramaPrincipal  = 'wpgd0010a.w';
 NomeDoProgramaDeZoom     = 'zoei01.w'; 
 </script>
-<script SRC="/modelo/js/funcoes.js"></script>
+<script SRC="/cecred/js/funcoes.js"></script>
 <form action="#." method="POST" name="form">
 <input type="hidden" name="aux_cddopcao"  VALUE="">
 <input type="hidden" name="aux_lspermis"  VALUE="">
