--- a/progress/progrid/web/fontes/wpgd0012a.htm
+++ b/progress/progrid/web/fontes/wpgd0012a.htm
@@ -13,7 +13,7 @@
 <script language="JavaScript">
 NomeDoProgramaPrincipal  = '/wpgd0012a.w';
 </script>
-<script SRC="/modelo/js/funcoes.js"></script>
+<script SRC="/cecred/js/funcoes.js"></script>
 <form action="#." method="POST" name="form">
 <input type="hidden" name="aux_dsendurl" value="">
 <input type="hidden" name="aux_cddopcao" value="">           
