--- a/progress/progrid/web/fontes/wpgd0026c.htm
+++ b/progress/progrid/web/fontes/wpgd0026c.htm
@@ -28,7 +28,7 @@
    NomeDoProgramaPrincipal  = '/wpgd0026c.w';
   
 </script>
-<script SRC="/modelo/js/funcoes.js"></script>
+<script SRC="/cecred/js/funcoes.js"></script>
 
 <script type="text/javascript" src="/cecred/scripts/jquery.js"></script>
 <script type="text/javascript" src="/cecred/scripts/jquery.maskedinput.js"></script>
