--- a/progress/progrid/web/zoom/zwpgd0013.htm
+++ b/progress/progrid/web/zoom/zwpgd0013.htm
@@ -81,7 +81,10 @@
        return true
      }
    }            
-                  
+       
+   // seleciona a opcao contem
+	 document.form.vcriterio.selectedIndex = "1";
+	 
    document.form.pesquisa.focus();
    document.form.pesquisa.select();
 
