--- a/progress/siscaixa/web/crap087.htm
+++ b/progress/siscaixa/web/crap087.htm
@@ -9,6 +9,8 @@ Objetivo.......: Tela de Pagamento de GPS - SICREDI
 Alteracoes.....:
                 12/09/2016 - Adicionado chamada da função "callBlass(event)" - (Evandro - RKAM).      
                 29/09/2016 - Adicionado atributo onkeyDown para o form (Lucas Ranghetti #463572)
+                02/12/2016 - Trocar a chamada callBLass(event); por callBlass(event); pq o js
+                             é casesensitive e bugava a chamada dos BLs (Tiago/Elton SD563166).
 
 -->
 <html>
@@ -28,7 +30,7 @@ Alteracoes.....:
         <link rel="StyleSheet" type="text/css" href="/script/viacredi.css" />
         <title>PAGAMENTO GPS SICREDI</title>
     </head>
-    <body background="/images/moeda.jpg" bgproperties="fixed" class="fundo" onLoad="JavaScript:controlaCampos(); mudaFoco(); click();" onKeyUp="callBLass(event); callBLini(event); callBLsal(event); ">
+    <body background="/images/moeda.jpg" bgproperties="fixed" class="fundo" onLoad="JavaScript:controlaCampos(); mudaFoco(); click();" onKeyUp="callBlass(event); callBLini(event); callBLsal(event); ">
         <form  onKeyDown="change_page(event)" method=post>
         <input type="hidden" name="vh_foco"     id="vh_foco"     value="" >
         <input type="hidden" name="vh_nome"     id="vh_nome"     value="" >
