--- a/progress/progrid/web/fontes/wpgd0009.htm
+++ b/progress/progrid/web/fontes/wpgd0009.htm
@@ -847,7 +847,7 @@ function ValidaDados(form) {
   // verifica se as inscrições já estão encerradas.
   if (document.form.aux_idstaeve.value == "4") {
     //if (!confirm("Evento com inscrições encerradas. Deseja prosseguir com a pré-inscrição?")) 
-    alert("Evento com inscrições encerradas.")
+    alert("Evento com inscrições encerradas e/ou mês do evento fechado para contabilizaação.")
     return false; 
   }
         
