PRJ367 - Ajustes de homologação
git-tfs-id: [http://alm.cecred.coop.br:8080/tfs/DefaultCollection]$/FONTES/2017_08;C12571

--- a/progress/siscaixa/web/crap088.htm
+++ b/progress/siscaixa/web/crap088.htm
@@ -471,7 +471,7 @@ function reabilitaForm() {
         </tr>
         <script language="SpeedScript">
             END.
-        FOR EACH tt-lancamentos NO-LOCK:
+        FOR EACH tt-lancamentos WHERE tt-lancamentos.tpdocmto = 6 NO-LOCK:
             ASSIGN v_foco_conta = FALSE.
         </script>
         <tr>
