--- a/progress/siscaixa/web/crap071.htm
+++ b/progress/siscaixa/web/crap071.htm
@@ -474,7 +474,7 @@ function reabilitaForm() {
         </tr>
         <script language="SpeedScript">
             END.
-        FOR EACH tt-lancamentos NO-LOCK:
+        FOR EACH tt-lancamentos WHERE tt-lancamentos.tpdocmto = 6 NO-LOCK:
             ASSIGN v_foco_conta = FALSE.
         </script>
         <tr>
