git-tfs-id: [http://alm.cecred.coop.br:8080/tfs/DefaultCollection]$/FONTES/2017_08;C12619

--- a/progress/siscaixa/web/crap051c.htm
+++ b/progress/siscaixa/web/crap051c.htm
@@ -475,7 +475,7 @@ DEF TEMP-TABLE tt-conta NO-UNDO
                                                      " CONTA CHEQUE: " + STRING(crapmdw.nrctabdb) +
                                                      " CHEQUE: " + string(crapmdw.nrcheque)       +
                                                      " VALOR CHEQUE: " + STRING(v_valor1)         +
-                                                     " SALTO CONTA CHEQUE: " + STRING((de-valor-liberado + 
+                                                     " SALDO CONTA CHEQUE: " + STRING((de-valor-liberado + 
                                                      tt-conta.limite-credito),"-zzz,zzz,zz9.99") + 
                                                      " >> " + aux_nmarqlog).  
                                                                              
